# myactivities

./: .env_EXEMPLARY.txt  .gitignore  README.md  docker-compose.yml
data_fetch/: Dockerfile  pyproject.toml
data_fetch/src/app/: main.py  utils.py
data_viz/: Dockerfile  pyproject.toml
data_viz/src/app/: main.py  utils.py
data_viz/src/heatmaps/: last_activity.html
